--- a/rozak.html
+++ b/rozak.html
@@ -12,9 +12,11 @@
         margin: 20px;
         padding: 20px;
       }
+
       h1{
         font-family: Sans-Serif;
-        padding-top: 80px;
+        padding-top: 50%;
+        font-size: 30em;
         
       }
       
