--- a/rozak.html
+++ b/rozak.html
@@ -5,7 +5,7 @@
   
   <head>
     
-    <title>ROZAK</title>
+    <title>SABAR</title>
     <style>
       body{
         background-color:#09523e;
@@ -38,7 +38,7 @@
     <center>
     <div class="r">
    <center>
-      <h1>😎ROZAK😎</h1>
+      <h1>SABAR KAWAN</h1>
     </center>
     </center>
       
