--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="one">
     <h1 class="one">
       :)
-      <span>SEMANGAT</span>
+      <span>semangat</span>
     </h1>
     <p class="two" id="greetingText">Tetap semangat jangan pantang menyerah</p>
   </div>
