--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="one">
     <h1 class="one">
       :)
-      <span>semangat</span>
+      <span>SEMANGAT</span>
     </h1>
     <p class="two" id="greetingText">Tetap semangat jangan pantang menyerah</p>
   </div>
@@ -61,7 +61,7 @@
     </p>
   </div>
   <div class="six">
-    <img src="" alt="" class="lydia-dp" id="imagePath" />
+    <img src="irene.jpg" style="height: 300px; width: 400px; margin-top: 100px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
     <img src="hat.svg" alt="" class="hat" />
     <div class="wish">
       <h3 class="wish-hbd">Kami para kawan menyemangati kalian</h3>
