--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </p>
   </div>
   <div class="six">
-    <img src="irene.jpg" style="height: 300px; width: 400px; margin-top: 100px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
+    <img src="rpl2.jpg" style="height: 300px; width: 400px; margin-top: 100px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
     <img src="hat.svg" alt="" class="hat" />
     <div class="wish">
       <h3 class="wish-hbd">Kami para kawan menyemangati kalian</h3>
