--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>SEMANGAT:)</title>
+    <title>Selamat Ulang Tahun</title>
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
       rel="stylesheet"
@@ -28,33 +28,33 @@
   <div class="one">
     <h1 class="one">
       :)
-      <span>SEMANGAT</span>
+      <span>HBD</span>
     </h1>
-    <p class="two" id="greetingText">Tetap semangat jangan pantang menyerah</p>
+    <p class="two" id="greetingText">Terima Kasih Kami Ucapkan </p>
   </div>
   <div class="three">
-    <p>Kalian adalah para pahlawan</p>
+    <p>Terima kasih kami utarakan</p>
   </div>
   <!-- Kotak Pesan -->
   <div class="four">
     <div class="text-box">
       <p class="hbd-chatbox">
-        Tak peduli kata kata orang , disini kalian pahlawan
+        Mengajar kami dengan penuh keikhlasan
       </p>
       <p class="fake-btn">Send</p>
     </div>
   </div>
   <div class="five">
-    <p class="idea-1">Tak apa kepanikan.</p>
-    <p class="idea-2">tak apa ketak adilan.</p>
+    <p class="idea-1">Maaf kami ,terkadang membuat kesal.</p>
+    <p class="idea-2">Maaf kami ,akan atas kemarahan.</p>
     <p class="idea-3">
-      yang terpenting adalah kalian
-      <strong>PAHLAWAN</strong>
+      teruntuk > < 
+      <strong>Buk Guru</strong>
       .
     </p>
-    <p class="idea-4">KARNA,</p>
+    <p class="idea-4">karna,</p>
     <p class="idea-5">
-      ya tak ada kata selain itu
+      kami sayang Buk Guru
       <span>:)</span>
     </p>
     <p class="idea-6">
@@ -63,11 +63,12 @@
     </p>
   </div>
   <div class="six">
-    <img src="rpl1.jpg" style="height: 300px; width: 400px; margin-top: 100px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
+    <img src="rpl1.jpg" style="height: 300px; width: 400px; margin-top: 50px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
     <!--<img src="" alt="" class="hat" />-->
     <div class="wish">
-      <h3 class="wish-hbd">Kami para kawan menyemangati kalian</h3>
-      <h5 id="wishText">PARA PEJUAN  ;)</h5>
+      <h3 class="wish-hbd">Kami hanya murid biasa yang mungkin tak bisa 
+seluar biasa murid dilluar sana , tapi sayang kami tak terhingga untuk</h3>
+      <h5 id="wishText">Guruku :)</h5>
     </div>
   </div>
   <div class="seven">
@@ -137,8 +138,8 @@
     </svg>
   </div>
   <div class="nine">
-    <p>sEKARANG JANGAN TERLALU PIKIRKAN.</p>
-    <p id="replay">TETAPLAH PUSH RANK.</p>
+    <p>Kami harap ucapan sederhana ini berarti.</p>
+    <p id="replay">DAN TERIMA KASIH UNTUK SEMUANYA .</p>
     <p class="last-smile">:)</p>
   </div>
 </div>
