--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     </p>
   </div>
   <div class="six">
-    <img src="rpl1.jpg" style="height: 300px; width: 400px; margin-top: 50px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
+    <img src="rpl1.jpg" style="height: 300px; width: 400px; top: 50px; position:absolute; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
     <!--<img src="" alt="" class="hat" />-->
     <div class="wish">
-      <h3 class="wish-hbd">Kami hanya murid biasa yang mungkin tak bisa 
-seluar biasa murid dilluar sana , tapi sayang kami tak terhingga untuk</h3>
+      <h3 class="wish-hbd">Kami-hanya-murid-biasa-yang-mungkin-tak-bisa 
+-seluar-biasa-murid-dilluar-sana -,- tapi-sayang-kami-tak-terhingga-untuk</h3>
       <h5 id="wishText">Guruku :)</h5>
     </div>
   </div>
