--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
   <div class="five">
     <p class="idea-1">Maaf kami ,terkadang membuat kesal.</p>
-    <p class="idea-2">Maaf kami ,akan atas kemarahan.</p>
+    <p class="idea-2">Maaf kami ,akan atas kekecewaan.</p>
     <p class="idea-3">
       teruntuk > < 
       <strong>Buk Guru</strong>
@@ -63,7 +63,7 @@
     </p>
   </div>
   <div class="six">
-    <img src="rpl1.jpg" style="height: 300px; width: 400px; top: 50px; position:absolute; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
+    <img src="rpl1.jpg" style="height: 300px; width: 400px; top: 50px; position:relative; z-index: 1;"alt="" class="lydia-dp" id="imagePath" />
     <!--<img src="" alt="" class="hat" />-->
     <div class="wish">
       <h3 class="wish-hbd">kami hanya murid biasa tapi, sayang kami luar biasa </h3>
