--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </p>
   </div>
   <div class="six">
-    <img src="rpl1.jpg" id="foto" style="height: 300px; width: 400px; margin-top: 50px; position:relative;"alt="" class="lydia-dp" id="imagePath" />
+    <img src="rpl1.jpg" style="height: 300px; width: 400px; margin-top: 50px; position:relative;"alt="" class="lydia-dp" id="imagePath" />
     <!--<img src="" alt="" class="hat" />-->
     <div class="wish">
       <h3 class="wish-hbd">kami hanya murid biasa tapi, sayang kami luar biasa </h3>
